# controllers/commentController.js
@@ -4,6 +4,8 @@ import appSuccess from '../utils/errors/appSuccess.js';
 import {
   commentSchema,
   updateCommentSchema,
+  queryCommentSchema,
+  queryRepliesSchema
 } from '../utils/validations/commentValidator.js';
 import {
   addCommentServices,
@@ -11,12 +13,12 @@ import {
   updateCommentServices,
   getCommentRepliesServices,
   deleteCommentServices,
+  getTotalCommentCount
 } from '../services/commentService.js';
 import {
   STATUS_CODE,
   SUCCESS_MESSAGES,
 } from '../utils/constants/constants.js';
-
 
 // Create new comment
 const createComment = catchAsync(async (req, res, next) => {
@@ -29,17 +31,38 @@ const createComment = catchAsync(async (req, res, next) => {
   return res.status(STATUS_CODE.CREATED).json(appSuccess(SUCCESS_MESSAGES.COMMENT_CREATED, newComment));
 });
 
+// Get total count of comments on a post
+const getCommentCount = catchAsync(async (req, res, next) => {
+  const { id: postId } = req.params;
+  try {
+    const count = await getTotalCommentCount(postId);
+    return res.status(STATUS_CODE.OK).json(appSuccess(SUCCESS_MESSAGES.COMMENT_COUNT_RETRIEVED, { count }));
+  } catch (error) {
+    return next(new AppError(error.message, STATUS_CODE.INTERNAL_SERVER_ERROR));
+  }
+});
+
 // Get comments on a post
 const postComments = catchAsync(async (req, res, next) => {
   const { id: postId } = req.params;
-  const comments = await postCommentsServices(postId);
-  return res.status(STATUS_CODE.OK).json(appSuccess(SUCCESS_MESSAGES.COMMENTS_RETRIEVED, comments));
+  const { error, value } = queryCommentSchema.validate(req.query, { allowUnknown: true });
+  if (error) {
+    return next(new AppError(error.details[0].message, STATUS_CODE.BAD_REQUEST));
+  }
+  const { limit, offset, includeReplies } = value;
+  const comments = await postCommentsServices(postId, { limit, offset, includeReplies });
+  res.status(STATUS_CODE.OK).json(appSuccess(SUCCESS_MESSAGES.COMMENTS_RETRIEVED, comments));
 });
 
 // Get replies on a comment 
 const getCommentReplies = catchAsync(async (req, res, next) => {
-  const {id:commentId} = req.params;
-  const replies = await getCommentRepliesServices(commentId);
+  const { id: commentId } = req.params;
+  const { error, value } = queryRepliesSchema.validate(req.query, { allowUnknown: true });
+  if (error) {
+    return next(new AppError(error.details[0].message, STATUS_CODE.BAD_REQUEST));
+  }
+  const { limit, offset } = value;
+  const replies = await getCommentRepliesServices(commentId, { limit, offset });
   return res.status(STATUS_CODE.OK).json(appSuccess(SUCCESS_MESSAGES.REPLIES_RETRIEVED, replies));
 });
 
@@ -52,7 +75,7 @@ const updateCommentById = catchAsync(async (req, res, next) => {
   if (error) {
     return next(new AppError(error.details[0].message, STATUS_CODE.BAD_REQUEST));
   }
-  const updatedComment = await updateCommentServices(value, {commentId, userId});
+  const updatedComment = await updateCommentServices(value, { commentId, userId });
   return res.status(STATUS_CODE.OK).json(appSuccess(SUCCESS_MESSAGES.COMMENT_UPDATED, updatedComment));
 });
 
@@ -60,7 +83,7 @@ const updateCommentById = catchAsync(async (req, res, next) => {
 const deleteCommentById = catchAsync(async (req, res, next) => {
   const { id: commentId } = req.params;
   const { id: userId } = req.user;
-  const deletedComment = await deleteCommentServices({commentId, userId});
+  const deletedComment = await deleteCommentServices({ commentId, userId });
   return res.status(STATUS_CODE.OK).json(appSuccess(SUCCESS_MESSAGES.COMMENT_DELETED, deletedComment));
 });
 
@@ -70,4 +93,5 @@ export {
   updateCommentById,
   getCommentReplies,
   deleteCommentById,
+  getCommentCount,
 };
